tests/test133.rael.exp
Error [tests/test133.rael:1:17]: Negative range direction for substrings is not allowed
| log "string" at (3 to 1)
|                 ^
