tests/test133.rael
log "string" at (3 to 1)